[package]
name = "orchestration"
version = "0.1.0"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"

[dependencies]
clap = "2"
cliff = "0.3.1"
color-eyre = "0.5"
futures-util = { version = "0.3", default-features = false, features = [ "async-await", "alloc" ] }
openssh = "0.6"
rusoto_core = "0.45"
rusoto_sts = "0.45"
tokio = { version = "0.2", features = [ "full" ] }
tracing = "0.1"
tracing-error = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
tsunami = "0.11.0-beta.9"
