[package]
name = "orchestration"
version = "0.1.0"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"

[dependencies]
clap = "2"
cliff = "0.3.2"
color-eyre = "0.5"
futures-util = { version = "0.3", default-features = false, features = [ "async-await", "alloc" ] }
openssh = "0.6"
rusoto_core = "0.45"
rusoto_sts = "0.45"
tokio = { version = "0.2", features = [ "full" ] }
tracing = "0.1"
tracing-error = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
tsunami = "0.11.0-beta.9"

# to ensure redis actually only runs with one core:
# diff --git a/src/providers/aws.rs b/src/providers/aws.rs
# index f6854d1..e6a7744 100644
# --- a/src/providers/aws.rs
# +++ b/src/providers/aws.rs
# @@ -949,6 +949,14 @@ impl RegionLauncher {
#              async {
#                  // and issue one spot request per group
#                  let mut req = rusoto_ec2::RunInstancesRequest::default();
# +
# +                if instance_type == "r5n.large" {
# +                    req.cpu_options = Some(rusoto_ec2::CpuOptionsRequest {
# +                        core_count: Some(1),
# +                        threads_per_core: Some(1),
# +                    });
# +                }
# +
#                  req.image_id = Some(ami);
#                  req.instance_type = Some(instance_type);
#                  req.placement = self
# [patch.crates-io]
# tsunami = { path = "/home/jon/dev/tsunami" }
